src/components/divider/base.css
@import "./colors.css";
@import "./direction.css";
@import "./placement.css";
@import "./styles.css";

@utility divider {
    --divider--margin: 1rem 0;
    --color-divider: var(--color-base-soft);
    --divider-direction: right;
    --divider--flex-direction: row;
    --divider--width: 100%;
    --divider--height: 1px;
    --divider-dash-length: 10px;
    --divider-gap-length: 0px;

    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: var(--divider--flex-direction);
    width: var(--divider--width);
    height: var(--divider--height);

    @variant not-empty {
        column-gap: 0.5rem;
    }

    &::before, &::after {
        content: "";
        margin: var(--divider--margin);
        width: var(--divider--width);
        height: var(--divider--height);
        background: repeating-linear-gradient(to var(--divider-direction),
                var(--color-divider) 0px,
                var(--color-divider) var(--divider-dash-length),
                transparent var(--divider-dash-length),
                transparent calc(var(--divider-dash-length) + var(--divider-gap-length)));
    }

}

